	name clashs by selecting lexicographically smaller name.
	(Release 1.7.13.1)
2014
	Handle inconsistencies due to anchor constraints in conflict
	with other constraints/heuristics, e.g. max-diff: 1) accept -inf
	pairwise similarities for guide tree construction; 2) clear
	consensus anchor strings with duplicate names
	(Release 1.7.14)
	Fix bug concerning iterative alignment and alignment evaluation
	Rename locarna_X to exparna_p
	ExpaRNA-P code "publication ready"
	(Release 1.7.15)
	ExpaRNA-P rename of tools
	(Release 1.7.16)
        Second type of stacking terms: new-stacking
	Add heuristic to restrict maximum number of "significant" base
	pairs: max-bps-length-ratio
	Add max-diff restriction at arc match ends: --max-diff-at-am
	Restructure parameter passing to Aligner* classes: use "named
	argument" idiom
	(Release 1.7.17pre)
	max-bps/uil/bpil-length-ratio for SPARSE/ExparnaP
	(Release 1.7.17pre2)
	Remove absolute path dependencies in scripts. This changes the
	behavior, since paths are not fixed at compile time. For
	example, the Vienna RNA programs are located via PATH environment
	variable.
	Require linking to VRNA. Remove configure options. Disallow
	renaming of Vienna RNA tools RNAfold, etc.; expect them in path.
	Always compile SPARSE/ExpaRNA-P. Don't pass mlocarna script
	through configure anymore.
	Add option --sparse to mlocarna
	Add rnafold-temperature option to mlocarna
	Use rnafold temperature and parameter files for alifold
	Warn if used with alifold-consensus-dp
	Add unit tests for mlocarna calls (standard, prob, sparse)
	Align alifold structure to alignment in mlocarna output
	Add Example gcvT.fa for SPARSE
	sparse: --special-gap-symbols option added (default is false)
	(Release 1.8.0)
	Implement ribofit
	Bugfix in OMatrix: incorrect address calculation
	Bugfix: LocARNA crashed while writing the result pp file if
	alignments of zero length are computed with options local file
	output and alifold consensus dp (alifold workaround)