@@ -3,16 +3,31 @@
 
 #include <vector>
 #include <cmath>
+#include <iostream>
 
 namespace LocARNA {
     size_t
     ConfusionMatrix::count_common_bps(const RnaStructure &s1,
-				      const RnaStructure &s2,
-				      const BPFilter &filter) {
+				      const RnaStructure &s2) {
 	size_t count=0;
+	
 	for (RnaStructure::const_iterator it=s1.begin();s1.end()!=it; ++it) {
-	    if (filter(*it) && s2.contains(*it)) {
-		count++;
+	    const RnaStructure::bp_t &bp = *it;
+	    size_t i=bp.first;
+	    size_t j=bp.second;
+	    if (filter_(bp)) {
+		if ( s2.contains(bp)
+		     ||
+		     ( slide_ && ( s2.contains( RnaStructure::bp_t(i-1,j) ) ||
+				   s2.contains( RnaStructure::bp_t(i+1,j) ) ||
+				   s2.contains( RnaStructure::bp_t(i,j-1) ) ||
+				   s2.contains( RnaStructure::bp_t(i,j+1) ) )
+		       )
+		     ) {
+		    
+		    count++;
+
+		}
 	    }
 	}
 	return count;
@@ -21,22 +36,20 @@ namespace LocARNA {
     size_t
     ConfusionMatrix
     ::count_conflicting_base_pairs(const RnaStructure &s1,
-				   const RnaStructure &s2,
-				   const BPFilter &filter) {
+				   const RnaStructure &s2) {
 	size_t count=0;
 
 	std::vector<bool> s2free(s2.length(),true);
 	
 	for (RnaStructure::const_iterator it=s2.begin();s2.end()!=it; ++it) {
-	    if (filter(*it)) {
+	    if (filter_(*it)) {
 		s2free[it->first]=false;
 		s2free[it->second]=false;
 	    }
 	}
 	
 	for (RnaStructure::const_iterator it=s1.begin();s1.end()!=it; ++it) {
-	    if (filter(*it)
-		&& !s2.contains(*it)
+	    if (filter_(*it)
 		&& !(s2free[it->first] && s2free[it->second])) {
 		count++;
 	    }
@@ -45,12 +58,12 @@ namespace LocARNA {
 	return count;
     }
     
-    size_t 
-    ConfusionMatrix::count_potential_base_pairs(size_t length, const BPFilter &filter) {
+    size_t
+    ConfusionMatrix::count_potential_base_pairs(size_t length) {
 	size_t count=0;
 	for (size_t i=0; i<=length; i++) {
 	    for (size_t j=i+1; j<=length; j++) {
-		if (filter(i,j)) {
+		if (filter_(i,j)) {
 		    count++;
 		}
 	    }
@@ -58,11 +71,11 @@ namespace LocARNA {
 	return count;
     }
 
-    size_t 
-    ConfusionMatrix::count_base_pairs(const RnaStructure &s, const BPFilter &filter) {
+    size_t
+    ConfusionMatrix::count_base_pairs(const RnaStructure &s) {
 	size_t count=0;
 	for (RnaStructure::const_iterator it=s.begin();s.end()!=it; ++it) {
-	    if (filter(*it)) {
+	    if (filter_(*it)) {
 		count++;
 	    }
 	}
@@ -71,25 +84,45 @@ namespace LocARNA {
     
     void
     ConfusionMatrix::compute_confusion_matrix(const RnaStructure &ref, 
-					      const RnaStructure &pred, 
-					      const BPFilter &filter) {
+					      const RnaStructure &pred) {
 	// compute confusion matrix
     
-	// true positives base pairs are present in prediction and reference  
-	tp_ = count_common_bps(ref,pred,filter);
-    
-	// false positives base pairs are present in prediction but not in reference  
-	fp_ = count_base_pairs(pred,filter) - tp_;
+	size_t common = count_common_bps(ref,pred);
+
+	size_t positives = count_base_pairs(pred);
+	size_t negatives = count_base_pairs(ref);
+
+	// conflicting base pairs are present in prediction but
+	// conflict with reference
+	size_t conflicting =
+	    conflict_
+	    ? count_conflicting_base_pairs(pred,ref)
+	    : positives;
 	
-	// conflicting false positives base pairs are present in prediction but conflict with reference  
-	cfp_ = count_conflicting_base_pairs(pred,ref,filter);
-    
-	// false negative base pairs are present in reference but not in prediction
-	fn_ = count_base_pairs(ref,filter) - tp_;
+
+	std::cerr << "com: "<<common
+		  <<" confl: "<<conflicting
+		  <<" pos: "<<positives
+		  <<" neg: "<<negatives
+		  << std::endl;
+	
+	// true positives base pairs are present in prediction and
+	// reference (optionally due to slide rule) or
+	// non-conflicting; note: common base pairs are always
+	// conflicting
+	tp_ = common + (positives - conflicting); 
+	
+	// false positives base pairs are present in prediction but
+	// not in reference
+	fp_ = positives - tp_;
+	
+	// false negative base pairs are present in reference but not
+	// in prediction
+	fn_ = negatives - common;
     
 	// true negative base pairs are hypothetical base pairs that
 	// are neither present in reference nor in prediction
-	tn_ = count_potential_base_pairs(ref.length(),filter)
+	tn_ = count_potential_base_pairs(ref.length())
 	    - tp_
 	    - fp_
 	    - fn_;
@@ -97,8 +130,13 @@ namespace LocARNA {
 
 
     ConfusionMatrix::ConfusionMatrix(const std::string &ref_struct,
-				     const std::string &pred_struct, 
+				     const std::string &pred_struct,
+				     bool slide,
+				     bool conflict,
 				     const BPFilter &filter)
+	:slide_(slide),
+	 conflict_(conflict),
+	 filter_(filter)
     {
 	RnaStructure ref(ref_struct);
 	RnaStructure pred(pred_struct);
@@ -106,17 +144,21 @@ namespace LocARNA {
 	if(ref.length()==0) throw -1;
 	if(pred.length()!=ref.length()) throw -2;
     
-	compute_confusion_matrix(ref,pred,filter);
+	compute_confusion_matrix(ref,pred);
     }
 
     ConfusionMatrix::ConfusionMatrix(const RnaStructure &ref, 
 				     const RnaStructure &pred, 
+				     bool slide,
+				     bool conflict,
 				     const BPFilter &filter)
+	:slide_(slide),
+	 conflict_(conflict),
+	 filter_(filter)
     {
-	if(ref.length()==0) throw -1;
 	if(pred.length()!=ref.length()) throw -2;
-    
-	compute_confusion_matrix(ref,pred,filter);
+	
+	compute_confusion_matrix(ref,pred);
     }
 
 
@@ -131,19 +173,17 @@ namespace LocARNA {
 	if (tp()==0) return 0.0;
 	return tp()/((double)tp()+(double)fn());
     }
-    
+
+    double
+    ConfusionMatrix::spec() const {
+	if (tn()==0) return 0.0;
+	return tn()/((double)tn()+(double)fp());
+    }
+
     double
     ConfusionMatrix::f1_score() const {
 	if (ppv()==0 || sens()==0) return 0.0;
 	return 2.0 * ppv()*sens() / (ppv()+sens());
-    }
-
-    double
-    ConfusionMatrix::cf1_score() const {
-	double cppv = tp()==0 ? 0 : tp()/((double)tp()+cfp());
-	
-	if (cppv==0 || sens()==0) return 0.0;
-	return 2.0 * cppv*sens() / (cppv+sens());
     }
     
     double
